--- a/app/templates/order/_ggv_form.hbs
+++ b/app/templates/order/_ggv_form.hbs
@@ -191,6 +191,6 @@
     </div>
   </div>
   {{#if order.isDraft}}
-    {{partial "order/cancel_order"}}
+    {{partial "order/cancel_order_button"}}
   {{/if}}
 {{/book-van}}
