--- a/app/templates/order/_self_vehicle_form.hbs
+++ b/app/templates/order/_self_vehicle_form.hbs
@@ -63,7 +63,7 @@
     </div>
   </div>
   {{#if order.isDraft}}
-    {{partial "order/cancel_order"}}
+    {{partial "order/cancel_order_button"}}
   {{/if}}
 {{else}}
   <div class="loading_container">
