--- a/app/templates/order/confirm.hbs
+++ b/app/templates/order/confirm.hbs
@@ -19,7 +19,7 @@
       </div>
     </div>
     {{#if order.isDraft}}
-      {{partial "order/cancel_order"}}
+      {{partial "order/cancel_order_button"}}
     {{/if}}
   </div>
   {{partial "cart_content/checkout_full_view"}}
