--- a/app/templates/order/confirm_booking.hbs
+++ b/app/templates/order/confirm_booking.hbs
@@ -7,11 +7,14 @@
       <div class="small-12 columns">
         <section class="main-section new-user-section ui login_page large-10 large-offset-1 medium-10 medium-offset-1">
           <nav class="tab-bar">
-            <section class="left-large book_appointment_headers">
+            <section class="left-large inline-content">
               {{fa-icon "angle-left"}} {{#link-to "order.appointment_details" order.id classNames="back"}}{{t "back"}}{{/link-to}}
             </section>
              <section class="middle tab-bar-section">
               <h1 class="title"> {{t "order.confirm_booking.title"}} </h1>
+            </section>
+            <section {{action "cancelBookingPopUp"}} id="cancel-booking-link" class="right-large inline-content right-align">
+              {{t "cancel"}}
             </section>
           </nav>
         </section>
@@ -61,3 +64,4 @@
     </section>
   </div>
 </div>
+{{partial "order/cancel_order"}}
