--- a/app/templates/order/goods_details.hbs
+++ b/app/templates/order/goods_details.hbs
@@ -7,7 +7,7 @@
       <div class="small-12 columns">
         <section class="main-section new-user-section ui login_page">
           <nav class="tab-bar">
-            <section class="left-large">
+            <section class="left-large inline-content">
               {{fa-icon "angle-left"}}
               {{#if fromClientInformation}}
                 {{#link-to 'order.client_information' order.id classNames="back"}}{{t "back"}}{{/link-to}}
@@ -19,6 +19,9 @@
             </section>
             <section class="middle tab-bar-section">
               <h1 class="title"> {{t "order.goods_details.title"}} </h1>
+            </section>
+            <section {{action "cancelBookingPopUp"}} id="cancel-booking-link" class="right-large inline-content right-align">
+              {{t "cancel"}}
             </section>
           </nav>
         </section>
@@ -57,3 +60,5 @@
     </div>
   </div>
 </div>
+
+{{partial "order/cancel_order"}}
