clicking on draft order from my_orders page should redirect to booking flow

--- a/app/templates/my_orders.hbs
+++ b/app/templates/my_orders.hbs
@@ -3,7 +3,7 @@
     <div class="title show-for-medium-up">{{t "my_orders.my_orders"}}</div>
   {{/unless}}
     <div class="small-12 columns content">
-      {{#if selectedOrder}}
+      {{#if (is-and selectedOrder (is-not selectedOrder.isDraft))}}
         <div class="order-summary {{selectedOrder.state}}">
           {{partial "order/summary"}}
         </div>
