--- a/app/templates/order/_order_block.hbs
+++ b/app/templates/order/_order_block.hbs
@@ -1,22 +1,41 @@
 <div class="order_block">
+    {{#if (is-equal order.state "draft")}}
+      {{#link-to 'request_purpose' (query-params bookAppointment=true orderId=order.id)}}
+        <div class="row order_header">
+          <div class="small-4 medium-0 large-4 columns order_transport"> 
+            <i class="fa fa-lg fa-{{ order.transportIcon }}"></i> {{ order.transportLabel }}
+          </div>
 
-    <div class="row order_header">
-      <div class="small-4 medium-0 large-4 columns order_transport"> 
-        <i class="fa fa-lg fa-{{ order.transportIcon }}"></i> {{ order.transportLabel }}
-      </div>
+          <div class="small-3 columns order_code">
+            {{order.code}}
+          </div>
 
-      <div class="small-3 columns order_code">
-        {{order.code}}
-      </div>
-
-      <div class="small-5 medium-9 large-5 columns order_state">
-        <div class="order_state_icon {{ order.state }}">
-          <i class="fa fa-{{ order.stateIcon }}"></i>
+          <div class="small-5 medium-9 large-5 columns order_state">
+            <div class="order_state_icon {{ order.state }}">
+              <i class="fa fa-{{ order.stateIcon }}"></i>
+            </div>
+            <div class="order_state_text"> {{ t (concat "my_orders." order.state) }} </div>
+          </div>
         </div>
-        <div class="order_state_text"> {{ t (concat "my_orders." order.state) }} </div>
-      </div>
-    </div>
+      {{/link-to}}
+    {{else}}
+      <div class="row order_header">
+        <div class="small-4 medium-0 large-4 columns order_transport"> 
+          <i class="fa fa-lg fa-{{ order.transportIcon }}"></i> {{ order.transportLabel }}
+        </div>
 
+        <div class="small-3 columns order_code">
+          {{order.code}}
+        </div>
+
+        <div class="small-5 medium-9 large-5 columns order_state">
+          <div class="order_state_icon {{ order.state }}">
+            <i class="fa fa-{{ order.stateIcon }}"></i>
+          </div>
+          <div class="order_state_text"> {{ t (concat "my_orders." order.state) }} </div>
+        </div>
+      </div>
+    {{/if}}
     <div class="row order_body">
       <div class="arrow-right">
         <i class="fa fa-chevron-right" aria-hidden="true"></i>
