--- a/app/templates/order/_order_block.hbs
+++ b/app/templates/order/_order_block.hbs
@@ -1,23 +1,12 @@
 <div class="order_block">
-    {{#if (is-equal order.state "draft")}}
+    {{#if order.isAppointmentDraft}}
       {{#link-to 'request_purpose' (query-params bookAppointment=true orderId=order.id)}}
-        <div class="row order_header">
-          <div class="small-4 medium-0 large-4 columns order_transport"> 
-            <i class="fa fa-lg fa-{{ order.transportIcon }}"></i> {{ order.transportLabel }}
-          </div>
-
-          <div class="small-3 columns order_code">
-            {{order.code}}
-          </div>
-
-          <div class="small-5 medium-9 large-5 columns order_state">
-            <div class="order_state_icon {{ order.state }}">
-              <i class="fa fa-{{ order.stateIcon }}"></i>
-            </div>
-            <div class="order_state_text"> {{ t (concat "my_orders." order.state) }} </div>
-          </div>
-        </div>
+        {{partial 'order/order_header'}}
       {{/link-to}}
+    {{else if order.isOnlineOrderDraft }}
+      {{#link-to 'order_details' (query-params orderId=order.id editRequest=true)}}
+        {{partial 'order/order_header'}}
+     {{/link-to}}
     {{else}}
       <div class="row order_header">
         <div class="small-4 medium-0 large-4 columns order_transport"> 
@@ -63,5 +52,4 @@
         </div>
       {{/if}}
     </div>
-
 </div>
