--- a/app/templates/my_orders.hbs
+++ b/app/templates/my_orders.hbs
@@ -2,34 +2,44 @@
   {{#unless hideHeaderBar}}
     <div class="title show-for-medium-up">{{t "my_orders.my_orders"}}</div>
   {{/unless}}
-    <div class="small-12 columns content">
-      {{#if (is-and selectedOrder (is-not selectedOrder.isDraft))}}
-        <div class="order-summary {{selectedOrder.state}}">
-          {{partial "order/summary"}}
+  <div class="small-12 columns content">
+    {{#if (is-and selectedOrder (is-not selectedOrder.isDraft))}}
+      <div class="order-summary {{selectedOrder.state}}">
+        {{partial "order/summary"}}
+      </div>
+    {{else}}
+      <div class="row">
+        <div class="columns button-container small-6">
+          {{#link-to "browse"}}
+            <div class="button light">
+              {{t 'home.order_goods.action'}}
+              <i class="fa fa-shopping-cart" aria-hidden="true"></i>
+            </div>
+          {{/link-to}}
         </div>
-      {{else}}
-        <div class="row">
-          <div class="columns button-container small-6">
-            {{#link-to "browse"}}
-              <div class="button light">
-                {{t 'home.order_goods.action'}}
-                <i class="fa fa-shopping-cart" aria-hidden="true"></i>
-              </div>
-            {{/link-to}}
-          </div>
-          <div class="columns button-container small-6">
-            {{book-appointment buttonStyle='light'}}
-          </div>
+        <div class="columns button-container small-6">
+          {{book-appointment buttonStyle='light'}}
         </div>
-        <ul class="list list-items">
-          {{#each arrangedOrders as |order|}}
-            <li {{action "setOrder" order}}>
+      </div>
+      <ul class="list list-items">
+        {{#each arrangedOrders as |order|}}
+          <li {{action "setOrder" order}}>
+            {{#if order.isAppointmentDraft}} 
+              {{#link-to 'request_purpose' (query-params bookAppointment=true orderId=order.id)}}
+                {{ partial 'order/order_block'}}
+              {{/link-to}}
+            {{else if order.isOnlineOrderDraft }}
+               {{#link-to 'order_details' (query-params orderId=order.id editRequest=true)}}
+                  {{ partial 'order/order_block'}}
+               {{/link-to}}
+            {{else}}
               {{ partial 'order/order_block'}}
-            </li>
-          {{/each}}
-        </ul>
-      {{/if}}
-    </div>
+            {{/if}}
+          </li>
+        {{/each}}
+      </ul>
+    {{/if}}
+  </div>
 </div>
 
 {{#message-box  isVisible=showCancelBookingPopUp classNames="popupOverlay cancel-appointment"}}
