setup browse app for messages

--- a/app/styles/app.scss
+++ b/app/styles/app.scss
@@ -24,6 +24,7 @@
 @import "order_block";
 @import "scroll_icon_settings";
 @import "confirm_booking";
+@import "messages";
 
 @import "templates/home";
 @import "templates/loading";
