--- a/app/templates/order/summary_tabs/messages.hbs
+++ b/app/templates/order/summary_tabs/messages.hbs
@@ -1,32 +1,37 @@
-<div class="row">
-  <div class="small-12 columns">
-    <div class="small-12 columns day_seperator">
-      <span></span>
-    </div>
-    <div class="ellipsis">
-      <div class='message_details'>
-        <div class="message_section">
-          {{#each selectedOrder.messages as |message|}}
-          {{#if message.isMessage}}
-          <div class="ellipsis {{message.state}} {{if message.myMessage 'my_message' 'received_message'}}" id={{message.id}}>
-            <div class="message_details">
-              {{#if message.myMessage}}
-              You
-              {{else}}
-              {{t "full_name" firstName=message.sender.firstName lastName=message.sender.lastName}}
-              {{/if}}
-              →
-              {{display-datetime message.createdAt format="HH:mm"}}
-            </div>
-            {{message.body}}
-          </div>
-          {{/if}}
-          {{/each}}
-        </div>
+<section class="message-section">
+  <div class="row">
+    <div class="small-12 columns">
+      {{#each groupedMessages as |messages|}}
+      <div class="small-12 columns day_seperator">
+        <span>{{display-messages-day messages.firstObject.createdDate 'Today'}}</span>
       </div>
+      {{#each messages as |message|}}
+      {{#if message.isMessage}}
+      <div class="ellipsis {{message.state}} {{if message.myMessage 'my_message' 'received_message'}}" id={{message.id}}>
+        <div class='message_details'>
+          {{#if message.myMessage}}
+          You
+          {{else}}
+          <i class="user-icon">{{fa-icon 'user-circle' size="2x"}}</i>
+          {{t "full_name" firstName=message.sender.firstName lastName=message.sender.lastName}}
+          {{message.sender.roleInitials}}
+          {{/if}}
+          →
+          {{display-datetime message.createdAt format="HH:mm"}}
+        </div>
+
+        {{message.body}}
+      </div>
+      {{else}}
+      <div class="small-12 columns item_log">
+        {{display-datetime message.createdAt format="HH:mm"}} - {{message.displayMessage}}
+      </div>
+      {{/if}}
+      {{/each}}
+      {{/each}}
     </div>
   </div>
-</div>
+</section>
 <div class="message-footer">
   <div class="btm message-form">
     <div class="row message-textbar">
