--- a/app/templates/request_purpose.hbs
+++ b/app/templates/request_purpose.hbs
@@ -41,7 +41,7 @@
                   <div class="small-12 columns">
                     {{t 'order.request_purpose.purpose'}}
                   </div>
-                  <div class="row time_inputs purpose" >
+                  {{!-- <div class="row time_inputs purpose" >
                     <div class=" custom_radio_buttons small-12 columns purpose">
                       {{radio-button
                       name="selectReason"
@@ -64,7 +64,7 @@
                         {{t 'order.request_purpose.for_client'}}
                       </label>
                     </div>
-                  </div>
+                  </div> --}}
                   <div class="row people-count">
                     <div class="small-12 columns people-count-label">
                       {{t 'order.request_purpose.people_count_info'}}
