Same flow for both booking processes

--- a/app/styles/_request_purpose.scss
+++ b/app/styles/_request_purpose.scss
@@ -90,7 +90,7 @@
   }
 
   .time-slots{
-    .custom_radio_buttons {
+    .custom_radio_buttons, .custom_slot_selection_link {
       border: 1px solid;
       padding: .4rem;
       margin-top: 1rem;
