make cross button on order summary clickable for ios safari

--- a/app/styles/_my_orders.scss
+++ b/app/styles/_my_orders.scss
@@ -65,6 +65,9 @@
         .strong {
           font-family: $header-font-family;
         }
+        .close-order-summary{
+          cursor: pointer;
+        }
         .header-icon {
           padding-top: 0.2rem;
           padding-left: 0;
