--- a/app/templates/order/summary.hbs
+++ b/app/templates/order/summary.hbs
@@ -1,5 +1,5 @@
 <div class="row header tab-bar">
-  <div class="columns small-2">
+  <div class="columns small-2 close-order-summary">
     <i class="fa fa-lg fa-times-circle-o" aria-hidden="true" {{ action "setOrder" null }}></i>
   </div>
   <div class="columns small-8 strong">
