update real time messages in browse if sent from stock

--- a/app/templates/order/_order_block.hbs
+++ b/app/templates/order/_order_block.hbs
@@ -30,6 +30,7 @@
           </div>
           <div class="message small-2 columns field">
             <i class="fa fa-comment-o fa-2x" aria-hidden="true"></i>
+            <span class="unread-messages-count">{{ order.unreadMessagesCount }}</span>
           </div>
         </div>
       {{/if}}
