--- a/app/styles/_order_block.scss
+++ b/app/styles/_order_block.scss
@@ -131,5 +131,13 @@
         @include center-vh;
       }
     }
+
+  }
+  .unread-messages-count {
+    color: white;
+    background: red;
+    border: 1px solid red;
+    border-radius: 12px;
+    padding: 2px;
   }
 }
