--- a/app/templates/order/summary_tabs/booking.hbs
+++ b/app/templates/order/summary_tabs/booking.hbs
@@ -8,12 +8,12 @@
       </div>
       {{#if selectedOrder.isEditAllowed}}
         <div class="small-3 medium-3 large-3 columns">
-          <a {{action "cancelBookingPopUp" "appointment_details"}} class="button expand secondary cancel-booking">
+          <a {{action "cancelBookingPopUp" "schedule_details"}} class="button expand secondary cancel-booking">
             {{t 'cancel'}}
           </a>
         </div>
         <div class="small-3 medium-3 large-3 columns">
-           <a {{action "redirectToEdit" "appointment_details"}} class="button expand edit-appointment-details">
+           <a {{action "redirectToEdit" "schedule_details"}} class="button expand edit-appointment-details">
             {{t 'edit'}}
           </a>
         </div>
