--- a/app/styles/_messages.scss
+++ b/app/styles/_messages.scss
@@ -1,13 +1,30 @@
 .message-container{
-  max-height: 24rem;
+  @media #{$large-only} {
+    max-height: 24rem;
+    height: 24rem;
+  }
+  @media #{$small-only} {
+    max-height: 28rem;
+    height: 28rem;
+  }
   overflow: scroll;
-  height: 24rem;
+
 }
 
 .message-container-expanded {
-  max-height: 22rem;
+  @media #{$large-only} {
+    max-height: 22rem;
+    height: 22rem;
+  }
+  @media #{$small-only} {
+    max-height: 26rem;
+    height: 26rem;
+  }
+  @media #{$medium-only} {
+    max-height: 26rem;
+    height: 26rem;
+  }
   overflow: scroll;
-  height: 22rem;
 }
 
 .message_details {
@@ -36,11 +53,16 @@
   width: 80%;
   border-radius: .5rem;
   padding: .8rem;
-  margin-left: 4%;
   margin-top: .8rem;
   font-size: .9rem;
   position: relative;
   -webkit-border-radius: 10px;
+  @media #{$small-only} {
+    margin-left: 9%
+  }
+  @media #{$large-only} {
+    margin-left: 4%
+  }
 }
 .day_seperator {
 text-align: center;
@@ -81,7 +103,15 @@ margin: 30px 0 30px;
 .chat_note {
   color: white;
   margin-bottom: 0.5rem;
-  margin-left: 13em;
+  @media #{$small-only} {
+    margin-left: 3.1rem;
+  }
+  @media #{$large-only} {
+    margin-left: 13em;
+  }
+  @media #{$medium-only} {
+    margin-left: 9rem;
+  }
   i {
     color: #f34d4f;
   }
