--- a/app/templates/order/_schedule_summary.hbs
+++ b/app/templates/order/_schedule_summary.hbs
@@ -25,7 +25,7 @@
 
   <div class="row info">
     <div class="small-4 columns">
-      {{t "order.confirm_booking.schedule_summary.appointment"}}
+      {{t "order.confirm_booking.schedule_summary.time"}}
     </div>
     <div class="small-8 detail columns">
       {{#if order.isAppointment}}
