--- a/app/templates/order/summary.hbs
+++ b/app/templates/order/summary.hbs
@@ -16,16 +16,18 @@
   {{#each orderSummaryTabs as |tab|}}
     <div class="{{ tab.name }} tab columns small-{{math 12 '/' orderSummaryTabs.length}} {{if (is-equal tab.name selectedOrderTab.name) 'selected' 'dimmed' }}" {{action "selectTab" tab}}>
       <i class="fa fa-{{ tab.icon }}" aria-hidden="true"></i>
+    </div>
+  {{/each}}
+</div>
+<div class="row tabs tab-name">
+  {{#each orderSummaryTabs as |tab|}}
+    <div class="{{ tab.name }} tab columns small-{{math 12 '/' orderSummaryTabs.length}} {{if (is-equal tab.name selectedOrderTab.name) 'selected' 'dimmed' }}"
+      {{action "selectTab" tab}}>
       {{ t (concat 'my_orders.details.tabs.' tab.name) }}
     </div>
   {{/each}}
 </div>
-{{#if (is-equal selectedOrderTab.name 'messages')}}
-  <div class="tab-content1">
-    {{ partial (concat 'order/summary_tabs/' selectedOrderTab.name)}}
-  </div>
-{{else}}
-  <div class="tab-content">
-    {{ partial (concat 'order/summary_tabs/' selectedOrderTab.name)}}
-  </div>
-{{/if}}
+
+<div class={{if (is-equal selectedOrderTab.name 'messages') 'tab-content-message' 'tab-content'}}>
+  {{ partial (concat 'order/summary_tabs/' selectedOrderTab.name)}}
+</div>
