Fix redirection from client_information

--- a/app/templates/order/schedule_details.hbs
+++ b/app/templates/order/schedule_details.hbs
@@ -24,7 +24,7 @@
               {{/if}}
             </section>
              <section class="middle tab-bar-section">
-              <h1 class="title"> {{t 'order.appointment.title'}} </h1>
+              <h1 class="title"> {{t 'order.transport_details.title'}} </h1>
             </section>
             <section {{action "cancelBookingPopUp"}} id="cancel-booking-link" class="right-large inline-content right-align">
               {{t "cancel"}}
